--- a/views/patient-details.ejs
+++ b/views/patient-details.ejs
@@ -114,21 +114,22 @@
 					</div>
 					<!-- <textarea class="form-control-plaintext" id="DescriptionTextAreaReadOnly" rows="5" readonly style="padding-left: 10px;padding-right: 5px;" placeholder="Enter Patient Description here..."></textarea> -->
 				</div>
-				<div class="d-flex justify-content-between" style="margin-top: 30px;">
-					<h4>Balance: Rs. <%= Balance %></h4>
-					<form method="POST">
-						<button type="submit" name="editDetails" value="edit" class="btn btn-primary"><svg
-								xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-								class="bi bi-pencil-square" viewBox="0 0 16 16">
-								<path
-									d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-								<path fill-rule="evenodd"
-									d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-							</svg> Edit</button>
-					</form>
-				</div>
+				<% if(PatientDetails.CaseNo != "Guest") { %> 
+					<div class="d-flex justify-content-between" style="margin-top: 30px;">
+						<h4>Balance: Rs. <%= Balance %></h4>
+						<form method="POST">
+							<button type="submit" name="editDetails" value="edit" class="btn btn-primary">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+									<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+									<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+								</svg>
+								Edit
+							</button>
+						</form>
+					</div>
+				<% } %>
 				<hr>
-				<% if(PatientDetails.Status=="ACTIVE") { %> 
+				<% if(PatientDetails.Status=="ACTIVE" && PatientDetails.CaseNo != "Guest" ) { %> 
 					<form method="POST" style="margin-top: 15px;">
 						<div class="input-group mb-3">
 							<span class="input-group-text">Deposit Amount</span>
@@ -290,15 +291,18 @@
 					</div>
 					<div class="d-flex justify-content-between" style="margin-top: 30px;">
 						<h4>Balance: Rs. <%= Balance %></h4><br>
-						<button type="submit" name="editDetails" value="save" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-square" viewBox="0 0 16 16">
-							<path d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5H3z"/>
-							<path d="m8.354 10.354 7-7a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
-						</svg> Save</button>
+						<button type="submit" name="editDetails" value="save" class="btn btn-primary">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-square" viewBox="0 0 16 16">
+								<path d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5H3z"/>
+								<path d="m8.354 10.354 7-7a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+							</svg>
+							Save
+						</button>
 					</div>
 				</form>
 				<hr>
 			<% } %> 
-			<% if(PatientDetails.Type=='B' ) { %>
+			<% if(PatientDetails.Type=='B' || PatientDetails.Type=='X') { %>
 				<div id="DressingInfo">
 					<div>
 						<% if(PatientDetails.Status=="ACTIVE") { %> 
@@ -313,171 +317,137 @@
 							<a href="/patient-details/payment-records?id=<%= PatientDetails.PatientID %>" type="button" class="btn btn-primary">View All Payments</a>
 						</div>
 					</div>
-					
-					<% //if(DressingInfo.length > 0) { %> 
-					<% if(false) { %> 
-						<div class="DressingDetails">
-							<table class="table">
-								<thead>
-									<tr>
-										<th scope="col">#</th>
-										<th scope="col">Date</th>
-										<th scope="col">Qty of Pads</th>
-										<th scope="col">Total Amount</th>
-										<th scope="col">Discount</th>
-										<th scope="col">Amount Paid</th>
-									</tr>
-								</thead>
-								<tbody>
-									<% //for(let i = 0; i < DressingInfo.length ; i += 1) { %>
-										<tr>
-											<th scope="row"><%= //i+1 %></th>
-											<td><%= //DressingInfo[i].Date.toLocaleDateString("en-UK") %></td>
-											<td><%= //DressingInfo[i].QtyOfPads %></td>
-											<td><%= //DressingInfo[i].TotalAmount %></td>
-											<% //if(DressingInfo[i].DiscountOption != null) { %> 
-												<td><%= //DressingInfo[i].AmountReduction %> (<%= DressingInfo[i].DiscountOption %>)</td>
-											<% //} else { %> 
-												<td><%= //DressingInfo[i].AmountReduction %></td>
-											<% //} %> 
-											<td><%= //DressingInfo[i].AmountPaid %></td>
-										</tr>
-									<% //} %>
-								</tbody>
-							</table>
-							<a type="button" href="/patient-details/dressing-records?id=<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary">
-								View All 
-								<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
-									<path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
-								</svg>
-							</a>
-						</div>
-					<% } else { %>
-						<table class="table">
-							<thead>
-								<tr>
-									<th scope="col">#</th>
-									<th scope="col">Date</th>
-									<th scope="col">Dressing Charges</th>
-									<th scope="col">Ointment Charges</th>
-									<th scope="col">Product Charges</th>
-									<th scope="col">Total Amount</th>
-									<th scope="col">Discount</th>
-									<th scope="col">Amount Paid</th>
+					<table class="table">
+						<thead>
+							<tr>
+								<th scope="col">#</th>
+								<th scope="col">Date</th>
+								<th scope="col">Dressing Charges</th>
+								<th scope="col">Ointment Charges</th>
+								<th scope="col">Product Charges</th>
+								<th scope="col">Total Amount</th>
+								<th scope="col">Discount</th>
+								<th scope="col">Amount Paid</th>
+							</tr>
+						</thead>
+						<tbody class="accordion" id="DressingRecords">
+							<% for(var i = 0; i < PaymentDetails.length; i++ ) { %> 
+								<tr class="accordion-item">
+									<% if(PaymentDetails[i].DressingCharges == null) { PaymentDetails[i].DressingCharges = 0 } %>
+									<% if(PaymentDetails[i].OintmentCharges == null) { PaymentDetails[i].OintmentCharges = 0 } %>
+									<% if(PaymentDetails[i].ProductCharges == null) { PaymentDetails[i].ProductCharges = 0 } %>
+									<% var theDate = new Date(PaymentDetails[i].Date);
+											PaymentDetails[i].Date = String(theDate.getDate()).padStart(2, '0' ) + "-" + String(theDate.getMonth() + 1).padStart(2, '0' ) + "-" + theDate.getFullYear(); %>
+									<th scope="row"><%= i+1 %></th>
+									<td><%= PaymentDetails[i].Date %></td>
+									<td><%= PaymentDetails[i].DressingCharges %></td>
+									<td><%= PaymentDetails[i].OintmentCharges %></td>
+									<td><%= PaymentDetails[i].ProductCharges %></td>
+									<td><%= PaymentDetails[i].TotalAmount %></td>
+									<td><%= PaymentDetails[i].Discount %></td>
+									<td><%= PaymentDetails[i].AmountPaid %></td>
+									<!-- <td>
+										<button type="submit" class="btn nav-link" onclick="DeletePayment();" name="RemovePaymentRecord" value="<%= //PaymentDetails[i].PaymentID %>" data-toggle="tooltip" data-placement="top" title="Delete Payment" style="color:red;">
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+												<path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+											</svg>
+										</button>
+									</td> -->
+									<td class="accordion-header" id="PaymentRecord<%= i %>Details">
+										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%= i %>" aria-expanded="false" aria-controls="collapse<%= i %>" style="max-height:10px;">
+											See Details...
+										</button>
+									</td>
 								</tr>
-							</thead>
-							<tbody class="accordion" id="DressingRecords">
-								<% for(var i = 0; i < PaymentDetails.length; i++ ) { %> 
-									<tr class="accordion-item">
-										<% if(PaymentDetails[i].DressingCharges == null) { PaymentDetails[i].DressingCharges = 0 } %>
-										<% if(PaymentDetails[i].OintmentCharges == null) { PaymentDetails[i].OintmentCharges = 0 } %>
-										<% if(PaymentDetails[i].ProductCharges == null) { PaymentDetails[i].ProductCharges = 0 } %>
-										<% var theDate = new Date(PaymentDetails[i].Date);
-												PaymentDetails[i].Date = String(theDate.getDate()).padStart(2, '0' ) + "-" + String(theDate.getMonth() + 1).padStart(2, '0' ) + "-" + theDate.getFullYear(); %>
-										<th scope="row"><%= i+1 %></th>
-										<td><%= PaymentDetails[i].Date %></td>
-										<td><%= PaymentDetails[i].DressingCharges %></td>
-										<td><%= PaymentDetails[i].OintmentCharges %></td>
-										<td><%= PaymentDetails[i].ProductCharges %></td>
-										<td><%= PaymentDetails[i].TotalAmount %></td>
-										<td><%= PaymentDetails[i].Discount %></td>
-										<td><%= PaymentDetails[i].AmountPaid %></td>
-										<td class="accordion-header" id="PaymentRecord<%= i %>Details">
-											<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%= i %>" aria-expanded="false" aria-controls="collapse<%= i %>" style="max-height:10px;">
-												See Details...
-											</button>
-										</td>
-									</tr>
-									<tr>
-										<td colspan="9">
-											<div id="collapse<%= i %>" class="accordion-collapse collapse" aria-labelledby="PaymentRecord<%= i %>Details" data-bs-parent="#PaymentRecords">
-												<div class="accordion-body" style="background-color: #F5F5F5;">
-													<% const RequiredDressingDetails = DressingDetails.find(obj => obj.PaymentID === PaymentDetails[i].PaymentID); %> 
-													<% const padQty = RequiredDressingDetails.QtyOfPads; %> 
-													<% var theDate = new Date(RequiredDressingDetails.DressingDate);
-															const DressingDate = String(theDate.getDate()).padStart(2, '0' ) + "-" + String(theDate.getMonth() + 1).padStart(2, '0' ) + "-" + theDate.getFullYear(); %>
-													<% const TotalAmount = RequiredDressingDetails.TotalAmount; %>
+								<tr>
+									<td colspan="9">
+										<div id="collapse<%= i %>" class="accordion-collapse collapse" aria-labelledby="PaymentRecord<%= i %>Details" data-bs-parent="#PaymentRecords">
+											<div class="accordion-body" style="background-color: #F5F5F5;">
+												<% const RequiredDressingDetails = DressingDetails.find(obj => obj.PaymentID === PaymentDetails[i].PaymentID); %> 
+												<% const padQty = RequiredDressingDetails.QtyOfPads; %> 
+												<% var theDate = new Date(RequiredDressingDetails.DressingDate);
+														const DressingDate = String(theDate.getDate()).padStart(2, '0' ) + "-" + String(theDate.getMonth() + 1).padStart(2, '0' ) + "-" + theDate.getFullYear(); %>
+												<% const TotalAmount = RequiredDressingDetails.TotalAmount; %>
 
-													<% if(padQty != null) { %> 
-														<p><strong>Dressing Date: </strong><%= DressingDate %></p>
-														<p><strong>Qty of Pads: </strong><%= padQty %></p>
-														<p><strong>Total Amount: </strong><%= TotalAmount %></p>
-														<hr>
-													<% } %>
-													<% if(PaymentDetails[i].OintmentCharges != 0) { %> 
-														<table class="table table-striped">
-															<thead>
-																<th>Ointment Name</th>
-																<th>Quantity</th>
-																<th>Price</th>
-																<th>Total Amount</th>
-															</thead>
-															<tbody>
-																<% for(var j = 0; j < OintmentDetails.length; j++ ) { %> 
-																	<% if(OintmentDetails[j].PaymentID == PaymentDetails[i].PaymentID && OintmentDetails[j].ProductName != null) { %>
-																		<tr>
-																			<td><%= OintmentDetails[j].ProductName %></td>
-																			<td><%= OintmentDetails[j].Quantity %></td>
-																			<td><%= OintmentDetails[j].Amount / OintmentDetails[j].Quantity %></td>
-																			<td><%= OintmentDetails[j].Amount %></td>
-																		</tr>
-																	<% } %>  
-																<% } %>
-															</tbody>
-														</table>
-													<% } %>
-													<% if(PaymentDetails[i].ProductCharges != 0) { %>
-														<table class="table table-striped">
-															<thead>
-																<th>Items Name</th>
-																<th>Quantity</th>
-																<th>Price</th>
-																<th>Total Amount</th>
-															</thead>
-															<tbody>
-																<% for(var j = 0; j < ProductDetails.length; j++ ) { %> 
-																	<% if(ProductDetails[j].PaymentID == PaymentDetails[i].PaymentID && ProductDetails[j].ProductName != null) { %>
-																		<tr>
-																			<td><%= ProductDetails[j].ProductName %></td>
-																			<td><%= ProductDetails[j].Quantity %></td>
-																			<td><%= ProductDetails[j].Amount / ProductDetails[j].Quantity %></td>
-																			<td><%= ProductDetails[j].Amount %></td>
-																		</tr>
-																	<% } %>  
-																<% } %>
-															</tbody>
-														</table>
-													<% } %>
-													<!--
+												<% if(padQty != null) { %> 
+													<p><strong>Dressing Date: </strong><%= DressingDate %></p>
+													<p><strong>Qty of Pads: </strong><%= padQty %></p>
+													<p><strong>Total Amount: </strong><%= TotalAmount %></p>
+													<hr>
+												<% } %>
+												<% if(PaymentDetails[i].OintmentCharges != 0) { %> 
 													<table class="table table-striped">
 														<thead>
-															<th>Charges</th>
+															<th>Ointment Name</th>
+															<th>Quantity</th>
 															<th>Price</th>
+															<th>Total Amount</th>
 														</thead>
 														<tbody>
-															<tr>
-																<td>Doctor checkup fees</td>
-																<td>250</td>
-															</tr>
-															<tr>
-																<td>Injection</td>
-																<td>100</td>
-															</tr>
-															<tr>
-																<td>Home Service</td>
-																<td>850</td>
-															</tr>
+															<% for(var j = 0; j < OintmentDetails.length; j++ ) { %> 
+																<% if(OintmentDetails[j].PaymentID == PaymentDetails[i].PaymentID && OintmentDetails[j].ProductName != null) { %>
+																	<tr>
+																		<td><%= OintmentDetails[j].ProductName %></td>
+																		<td><%= OintmentDetails[j].Quantity %></td>
+																		<td><%= OintmentDetails[j].Amount / OintmentDetails[j].Quantity %></td>
+																		<td><%= OintmentDetails[j].Amount %></td>
+																	</tr>
+																<% } %>  
+															<% } %>
 														</tbody>
 													</table>
-													-->
-												</div>
+												<% } %>
+												<% if(PaymentDetails[i].ProductCharges != 0) { %>
+													<table class="table table-striped">
+														<thead>
+															<th>Items Name</th>
+															<th>Quantity</th>
+															<th>Price</th>
+															<th>Total Amount</th>
+														</thead>
+														<tbody>
+															<% for(var j = 0; j < ProductDetails.length; j++ ) { %> 
+																<% if(ProductDetails[j].PaymentID == PaymentDetails[i].PaymentID && ProductDetails[j].ProductName != null) { %>
+																	<tr>
+																		<td><%= ProductDetails[j].ProductName %></td>
+																		<td><%= ProductDetails[j].Quantity %></td>
+																		<td><%= ProductDetails[j].Amount / ProductDetails[j].Quantity %></td>
+																		<td><%= ProductDetails[j].Amount %></td>
+																	</tr>
+																<% } %>  
+															<% } %>
+														</tbody>
+													</table>
+												<% } %>
+												<!--
+												<table class="table table-striped">
+													<thead>
+														<th>Charges</th>
+														<th>Price</th>
+													</thead>
+													<tbody>
+														<tr>
+															<td>Doctor checkup fees</td>
+															<td>250</td>
+														</tr>
+														<tr>
+															<td>Injection</td>
+															<td>100</td>
+														</tr>
+														<tr>
+															<td>Home Service</td>
+															<td>850</td>
+														</tr>
+													</tbody>
+												</table>
+												-->
 											</div>
-										</td>
-									</tr>
-								<% } %> 
-							</tbody>
-						</table>
-					<% } %>  
+										</div>
+									</td>
+								</tr>
+							<% } %> 
+						</tbody>
+					</table>
 				</div>
 				<hr>
 			<% } else if(PatientDetails.Type=='G' ) { %>
@@ -550,7 +520,7 @@
 					</div>
 					<!-- <div id="AddCharges">
 						<form action="/patient-details/add-charges">
-							<button type="submit" name="addID" value="<%= PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
+							<button type="submit" name="addID" value="<%= //PatientDetails.PatientID %>" class="mt-10 btn btn-primary btn-lg"><svg xmlns="http://www.w3.org/2000/svg"
 									width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
 									<path
 										d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
