--- a/views/patient.ejs
+++ b/views/patient.ejs
@@ -48,89 +48,105 @@
 <body>
   <div class="container">
     <%- include("./partials/header.ejs") %>
-    <div id="SearchPatient">
-      <h4>Search for patient</h4>
-      <form>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="searchoption" id="CaseNoRadio" value="CaseNo" checked>
-          <label class="form-check-label" for="CaseNoRadio">
-            Case Number
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="searchoption" id="MobileNumRadio" value="MobileNum">
-          <label class="form-check-label" for="MobileNumRadio">
-            Mobile Number
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="searchoption" id="NameRadio" value="Name">
-          <label class="form-check-label" for="NameRadio">
-            Patient Name
-          </label>
-        </div>
-        <div class="input-group flex-nowrap mt-10">
-          <span class="input-group-text" id="addon-wrapping"><svg xmlns="http://www.w3.org/2000/svg" width="20"
-              height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-              <path
-                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-            </svg><span style="color: red;"><strong>*</strong></span></span>
-          <input type="text" class="form-control" style="max-width: 400px;" name="searchkeyword"
-            placeholder="Search keyword" aria-label="Search" aria-describedby="addon-wrapping" required>
-          <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
-        </div>
-      </form><br>
-      <% if(searchResult != undefined) {%>
-        <% if (searchResult.length > 0) { %>
-          <div class="accordion" id="SearchFilters">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Filters
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  set filters here...
+    <div class="d-flex justify-content-start">
+      <div id="SearchPatient" style="margin-right: 150px;">
+        <h4>Search for patient</h4>
+        <form>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="searchoption" id="CaseNoRadio" value="CaseNo" checked>
+            <label class="form-check-label" for="CaseNoRadio">
+              Case Number
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="searchoption" id="MobileNumRadio" value="MobileNum">
+            <label class="form-check-label" for="MobileNumRadio">
+              Mobile Number
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="searchoption" id="NameRadio" value="Name">
+            <label class="form-check-label" for="NameRadio">
+              Patient Name
+            </label>
+          </div>
+          <div class="input-group flex-nowrap mt-10">
+            <span class="input-group-text" id="addon-wrapping"><svg xmlns="http://www.w3.org/2000/svg" width="20"
+                height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+              </svg><span style="color: red;"><strong>*</strong></span></span>
+            <input type="text" class="form-control" style="max-width: 400px;" name="searchkeyword"
+              placeholder="Search keyword" aria-label="Search" aria-describedby="addon-wrapping" required>
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
+          </div>
+        </form><br>
+        <% if(searchResult != undefined) {%>
+          <% if (searchResult.length > 0) { %>
+            <div class="accordion" id="SearchFilters">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Filters
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    set filters here...
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Case No.</th>
-                <th scope="col">Patient Name</th>
-                <th scope="col">Mobile Number</th>
-                <th scope="col">First Visit</th>
-                <th scope="col">Status</th>
-              </tr>
-            </thead>
-            <tbody>
-                <% for ( let i = 0;i < searchResult.length;i++) { %>
-                  <% var date = searchResult[i].FirstVisit; %>
-                  <% date = String(date.getDate()).padStart(2, '0') + "-" + String(date.getMonth() + 1).padStart(2, '0') + "-" + date.getFullYear(); %> 
-                  <tr>
-                    <form action="get">
-                      <th scope="row"><%= i+1 %> </th>
-                      <td><%= searchResult[i].CaseNo %></td>
-                      <td><%= searchResult[i].PatientName %></td>
-                      <td><%= searchResult[i].PhoneNumber %></td>
-                      <td><%= date %></td>
-                      <td><%= searchResult[i].Status %></td>
-                      <td><a class="btn btn-primary" href="patient-details?id=<%= searchResult[i].PatientID %> " role="button">Select</a></td>
-                    </form>
-                  </tr>
-                <% } %>
-            </tbody>
-          </table>
-        <% } else { %>
-          <div class="alert alert-danger" role="alert">
-            No Results Found
-          </div>
-        <% } %>
-      <% } %> 
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Case No.</th>
+                  <th scope="col">Patient Name</th>
+                  <th scope="col">Mobile Number</th>
+                  <th scope="col">First Visit</th>
+                  <th scope="col">Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                  <% for ( let i = 0;i < searchResult.length;i++) { %>
+                    <% var date = searchResult[i].FirstVisit; %>
+                    <% date = String(date.getDate()).padStart(2, '0') + "-" + String(date.getMonth() + 1).padStart(2, '0') + "-" + date.getFullYear(); %> 
+                    <tr>
+                      <form action="get">
+                        <th scope="row"><%= i+1 %> </th>
+                        <td><%= searchResult[i].CaseNo %></td>
+                        <td><%= searchResult[i].PatientName %></td>
+                        <td><%= searchResult[i].PhoneNumber %></td>
+                        <td><%= date %></td>
+                        <td><%= searchResult[i].Status %></td>
+                        <td><a class="btn btn-primary" href="patient-details?id=<%= searchResult[i].PatientID %> " role="button">Select</a></td>
+                      </form>
+                    </tr>
+                  <% } %>
+              </tbody>
+            </table>
+          <% } else { %>
+            <div class="alert alert-danger" role="alert">
+              No Results Found
+            </div>
+          <% } %>
+        <% } %> 
+      </div>
+      <div class="vr"></div>
+      <div id="QuickAccessShortcuts" style="margin-left: 100px;">
+        <h4>Quick Access Shortcuts</h4>
+        <form action="/patient-details/add-payment-record">
+          <button type="submit" name="addID" value="0" class="mt-10 btn btn-primary">
+            <svg xmlns="http://www.w3.org/2000/svg"
+              width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+              <path
+                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+            </svg>
+            Add Guest Payment
+          </button>
+        </form>
+      </div>
     </div>
     <div id="AddPatient" style="margin-top:25px">
       <h4>Add Patient</h4>
@@ -161,14 +177,14 @@
         </div>
         <div class="input-group mb-3">
           <label class="input-group-text" for="type">Patient Type</label>
-          <select class="form-select" id="type" name="type" style="max-width: 130px;">
+          <select class="form-select" id="type" name="type" style="max-width: 130px;" disabled>
             <option value="B" selected>Burns</option>
             <option value="G">General</option>
           </select>
         </div>
         <div class="input-group mb-3">
           <span class="input-group-text" id="basic-addon1">Disease</span>
-          <input type="text" class="form-control" id="disease" name="disease" placeholder="Enter Patient's Disease">
+          <input type="text" class="form-control" id="disease" name="disease" style="max-width: 603px;" placeholder="Enter Patient's Disease">
         </div>
         <div class="input-group mb-3">
           <span class="input-group-text" id="basic-addon1">Address</span>
