--- a/views/add-payment-record.ejs
+++ b/views/add-payment-record.ejs
@@ -18,22 +18,42 @@
     <%- include("./partials/header.ejs") %>
 		<div id="CartItemsRecord" class="d-flex justify-content-start">
 			<% if(DressingRecord_OnHold != undefined) { %> 
-				<div id="DressingRecordOnHold" style="padding-left: 10px;padding-top: 20px;padding-bottom: 10px;padding-right:30px;max-width: 30%;">
-					<% var theDate = new Date(DressingRecord_OnHold.DressingDate);
-							DressingRecord_OnHold.DressingDate = String(theDate.getDate()).padStart(2, '0' ) + "-" + String(theDate.getMonth() + 1).padStart(2, '0' ) + "-" + theDate.getFullYear(); %>
-					<h6>Dressing Date : <span><%= DressingRecord_OnHold.DressingDate %> </span></h6>
-					<h6>Pad Quantity : <span><%= DressingRecord_OnHold.QtyOfPads %> </span></h6>
-					<h6>Total Amount : <span><%= DressingRecord_OnHold.TotalAmount %> </span></h6>
-					<br>
-					<form method="POST">
-						<button type="submit" class="btn btn-primary" name="RemoveTempDressingHold" value="true" style="max-height: 40px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-							<path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
-						</svg> Remove</button>
-					</form>
+				<div id="DressingRecordOnHold" style="padding-left: 10px;padding-top: 10px;padding-bottom: 10px;padding-right:10px;">
+					<table class="table">
+						<thead>
+							<tr>
+								<th scope="col">#</th>
+								<th scope="col">Dressing Pads</th>
+								<th scope="col">Date</th>
+								<th scope="col">Total Amount</th>
+							</tr>
+						</thead>
+						<% for(let i=0;i<DressingRecord_OnHold.length;i+=1) { %>
+							<tbody>
+								<tr>
+									<th scope="row"><%= i+1 %> </th>
+									<td><%= DressingRecord_OnHold[i].QtyOfPads %></td>
+									<% var theDate = new Date(DressingRecord_OnHold[i].DressingDate);
+										DressingRecord_OnHold[i].DressingDate = String(theDate.getDate()).padStart(2, '0' ) + "-" + String(theDate.getMonth() + 1).padStart(2, '0' ) + "-" + theDate.getFullYear(); %>
+									<td><%= DressingRecord_OnHold[i].DressingDate %></td>
+									<td><%= DressingRecord_OnHold[i].TotalAmount %></td>
+									<td>
+										<form method="post">
+											<button type="submit" class="btn nav-link" name="RemoveTempDressingHold" value="<%= DressingRecord_OnHold[i].TempID %>">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+													<path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+													</svg>
+											</button>
+										</form>
+									</td>
+								</tr>
+							</tbody>
+						<% } %>
+					</table>
 				</div>
 				<div class="vr"></div>
 			<% } %>
-			<div id="ProductCartItems" style="padding-left: 20px;padding-top: 10px;padding-bottom: 10px;padding-right:20px;">
+			<div id="ProductCartItems" style="padding-left: 10px;padding-top: 10px;padding-bottom: 10px;padding-right:10px;">
 				<% if(CartItems.length == 0) { %> 
 					<p style="font-size: 18px;">Cart is currently empty...</p>
 				<% } else { %> 
@@ -42,7 +62,7 @@
 							<tr>
 								<th scope="col">#</th>
 								<th scope="col">Product Name</th>
-								<th scope="col">Quantity</th>
+								<th scope="col" style="text-align: center;">Quantity</th>
 								<th scope="col">Item Price</th>
 								<th scope="col">Total Amount</th>
 							</tr>
@@ -78,7 +98,7 @@
 				<% } %>
 			</div>
 			<div class="vr"></div>
-			<div id="ConfirmPayment" style="padding-left: 40px;padding-top: 10px;padding-bottom: 10px;padding-right:10px;">
+			<div id="ConfirmPayment" style="padding-left: 20px;padding-top: 10px;padding-bottom: 10px;padding-right:10px;">
 				<form method="POST">
 					<p><strong>Total Amount : </strong>Rs. <%= TotalAmount %> </p>
 					<% if(GuestMode === false) { %> 
@@ -116,19 +136,19 @@
 					<form method="POST">
 						<div class="input-group mb-3">
 							<span class="input-group-text" id="basic-addon1">Dressing Date</span>
-							<input type="date" class="form-control" id="dressdate" name="dressingdate" style="max-width: 150px;" required <%= DisableField %> >
+							<input type="date" class="form-control" id="dressdate" name="dressingdate" style="max-width: 150px;" required>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text" id="basic-addon1">Pad Quantity</span>
-							<input type="number" class="form-control" id="padqty" name="padquantity" style="max-width: 130px;" <%= DisableField %> >
-							<select class="form-select" id="padfrac" name="padfraction" style="max-width: 90px;" <%= DisableField %> >
+							<input type="number" class="form-control" id="padqty" name="padquantity" style="max-width: 130px;">
+							<select class="form-select" id="padfrac" name="padfraction" style="max-width: 90px;">
 								<option value="0" selected>0</option>
 								<option value="1/4">1/4</option>
 								<option value="1/2">1/2</option>
 								<option value="3/4">3/4</option>
 							</select>
 						</div>
-						<button type="submit" name="AddTempDressingRecord" value="True" class="mt-10 btn btn-primary btn-lg" <%= DisableField %> >
+						<button type="submit" name="AddTempDressingRecord" value="True" class="mt-10 btn btn-primary btn-lg">
 							<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
 								<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
 							</svg>Add Dressing Record (to hold)
