--- a/views/add-payment-record.ejs
+++ b/views/add-payment-record.ejs
@@ -17,7 +17,7 @@
   <div class="container">
     <%- include("./partials/header.ejs") %>
 		<div id="CartItemsRecord" class="d-flex justify-content-start">
-			<% if(DressingRecord_OnHold != undefined) { %> 
+			<% if(DressingRecord_OnHold !== undefined) { %> 
 				<div id="DressingRecordOnHold" style="padding-left: 10px;padding-top: 10px;padding-bottom: 10px;padding-right:10px;">
 					<table class="table">
 						<thead>
@@ -107,7 +107,7 @@
 							<input type="number" class="form-control" id="AmountPaid" name="AmountPaid" style="max-width: 150px;" required>
 						</div>
 					<% } %> 
-					<% if(DiscountOption != "None") { %> 
+					<% if(DiscountOption !== "None") { %> 
 						<div class="input-group mb-3">
 							<span class="input-group-text" id="basic-addon1">Discount Amount (<%= DiscountOption %>)</span>
 							<input type="number" class="form-control" id="DiscountAmount" name="DiscountAmount" style="max-width: 150px;" required>
@@ -167,7 +167,7 @@
 					</form>
 				</div>
 				<div>
-					<% if(SearchResult != undefined) {%> 
+					<% if(SearchResult !== undefined) {%> 
 						<% if(SearchResult.length > 0) { %> 
 							<% for(let i = 0;i < SearchResult.length;i += 1) { %> 
 								<form method="POST">
