Added structure of printing payment receipt

--- a/views/add-payment-record.ejs
+++ b/views/add-payment-record.ejs
@@ -118,7 +118,7 @@
 						<input type="date" class="form-control" id="PurchaseDate" name="PurchaseDate" style="max-width: 150px;" required>
 					</div>
 					<div class="form-check">
-						<input class="form-check-input" type="checkbox" value="" id="GenReceipt" disabled>
+						<input class="form-check-input" type="checkbox" name="GenerateReceipt" value="True" id="GenReceipt">
 						<label class="form-check-label" for="GenReceipt">
 							Generate Receipt
 						</label>
